# src/main/kotlin/com/ord/core/word/api/capture/WordCaptureController.kt
@@ -2,6 +2,7 @@ package com.ord.core.word.api.capture
 
 import com.ord.config.OpenApiSecurity
 import com.ord.core.auth.annotations.AuthenticatedUser
+import com.ord.core.langugae_proficiency.model.enums.LanguageName
 import com.ord.core.user.model.UserDTO
 import com.ord.core.word.api.capture.facades.WordCaptureFacade
 import com.ord.core.word.api.capture.requests.dto.ActivateManyWordsRequest
@@ -35,7 +36,8 @@ class WordCaptureController(
     @GetMapping("/overview")
     fun getOverview(
         @Parameter(hidden = true) @AuthenticatedUser user: UserDTO,
-    ): Mono<ResponseEntity<WordOverviewResponse>> = wordCaptureFacade.getOverview(user.id)
+        @RequestParam(required = false) language: LanguageName?,
+    ): Mono<ResponseEntity<WordOverviewResponse>> = wordCaptureFacade.getOverview(user.id, language)
 
     @PatchMapping("/activate-many")
     fun activateMany(
