# src/main/kotlin/com/ord/core/word/api/capture/facades/WordCaptureFacade.kt
@@ -1,5 +1,6 @@
 package com.ord.core.word.api.capture.facades
 
+import com.ord.core.langugae_proficiency.model.enums.LanguageName
 import com.ord.core.word.api.capture.requests.dto.ActivateManyWordsRequest
 import com.ord.core.word.api.capture.requests.dto.CaptureWordRequest
 import com.ord.core.word.api.capture.requests.dto.PublicWordsBulkCaptureRequest
@@ -15,7 +16,7 @@ interface WordCaptureFacade {
 
     fun publicBulkCapture(body: PublicWordsBulkCaptureRequest): Mono<ResponseEntity<Unit>>
 
-    fun getOverview(userId: UUID): Mono<ResponseEntity<WordOverviewResponse>>
+    fun getOverview(userId: UUID, language: LanguageName? = null): Mono<ResponseEntity<WordOverviewResponse>>
 
     fun updateCaptured(userId: UUID, wordId: UUID, body: UpdateCapturedWordRequest): Mono<ResponseEntity<WordDTO>>
 
